--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -577,6 +577,7 @@
   "Retrieves up-to-date documentation and code examples for any library.": "Ruft aktuelle Dokumentation und Codebeispiele für jede Bibliothek ab.",
   "Retry": "Zurückversuchen",
   "Retry All": "Alle erneut versuchen",
+  "Retry locally": "Lokal wiederholen",
   "Retry with Server Parsing": "Gerne, hier ist die Übersetzung ins Deutsche:\n\nMit Server-Parsing erneut versuchen",
   "Return to the top": "Zum Anfang zurückkehren",
   "Roadmap": "Roadmap",
