--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -575,6 +575,7 @@
   "Retrieves up-to-date documentation and code examples for any library.": "Recupera documentazione ed esempi di codice aggiornati per qualsiasi libreria.",
   "Retry": "Riprova",
   "Retry All": "Riprova tutto",
+  "Retry locally": "Riprova localmente",
   "Retry with Server Parsing": "Riprova con analisi del server",
   "Return to the top": "Torna all'inizio",
   "Roadmap": "Roadmap",
