--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -576,6 +576,7 @@
   "Retrieves up-to-date documentation and code examples for any library.": "Recupera documentação atualizada e exemplos de código para qualquer biblioteca.",
   "Retry": "Tentar Novamente",
   "Retry All": "Repetir Todos",
+  "Retry locally": "Tentar novamente localmente",
   "Retry with Server Parsing": "Tentar Novamente com Processamento no Servidor",
   "Return to the top": "Voltar ao topo",
   "Roadmap": "Roteiro",
