--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -577,6 +577,7 @@
   "Retrieves up-to-date documentation and code examples for any library.": "Получает актуальную документацию и примеры кода для любой библиотеки.",
   "Retry": "Повторить",
   "Retry All": "Повторить все",
+  "Retry locally": "Повторить локально",
   "Retry with Server Parsing": "Повторить с серверной обработкой",
   "Return to the top": "Вернуться к началу",
   "Roadmap": "План развития",
