--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -582,6 +582,7 @@
   "Retrieves up-to-date documentation and code examples for any library.": "检索任何库的最新文档和代码示例。",
   "Retry": "重试",
   "Retry All": "全部重试",
+  "Retry locally": "本地重试",
   "Retry with Server Parsing": "重试服务器解析",
   "Return to the top": "跳转到顶部",
   "Roadmap": "未来规划",
@@ -612,7 +613,7 @@
   "send": "发送",
   "Send": "发送",
   "Send Without Generating Response": "发送但不生成回答",
-  "Server parse failed": "服务器解析失败",
+  "Server parse failed": "Chatbox AI 解析失败",
   "Server parsing will consume compute credits. Please be cautious with large files.": "服务器解析将消耗计算积分。请谨慎处理大型文件。",
   "Session Raw JSON": "会话原始 JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "设置模型输出的最大 token 数量。请将其设置在模型可接受的范围内，否则可能会发生错误。",
