feat: add search on sessionList

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -586,6 +586,7 @@
   "Scope": "النطاق",
   "Search": "بحث",
   "Search All Conversations": "البحث في جميع المحادثات",
+  "Search conversations": "بحث المحادثات",
   "Search in Current Conversation": "البحث في المحادثة الحالية",
   "Search models": "بحث عن النماذج",
   "Search models...": "البحث عن النماذج...",
