--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -587,6 +587,7 @@
   "Scope": "Umfang",
   "Search": "Suche",
   "Search All Conversations": "Suche in allen Gesprächen",
+  "Search conversations": "Konversationen durchsuchen",
   "Search in Current Conversation": "Suche in aktuellem Gespräch",
   "Search models": "Modelle durchsuchen",
   "Search models...": "Modelle suchen...",
