--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -508,6 +508,7 @@
   "Scope": "Scope",
   "Search": "Search",
   "Search All Conversations": "Search All Conversations",
+  "Search conversations": "Search conversations",
   "Search in Current Conversation": "Search in Current Conversation",
   "Search models": "Search models",
   "Search models...": "Search models...",
