--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -586,6 +586,7 @@
   "Scope": "Alcance",
   "Search": "Buscar",
   "Search All Conversations": "Buscar en todas las conversaciones",
+  "Search conversations": "Buscar conversaciones",
   "Search in Current Conversation": "Buscar en la conversación actual",
   "Search models": "Buscar modelos",
   "Search models...": "Buscar modelos...",
