--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -587,6 +587,7 @@
   "Scope": "Portée",
   "Search": "Recherche",
   "Search All Conversations": "Rechercher dans toutes les conversations",
+  "Search conversations": "Chercher des conversations",
   "Search in Current Conversation": "Rechercher dans la conversation actuelle",
   "Search models": "Rechercher des modèles",
   "Search models...": "Rechercher des modèles...",
