--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -585,6 +585,7 @@
   "Scope": "Ambito",
   "Search": "Cerca",
   "Search All Conversations": "Cerca in tutte le conversazioni",
+  "Search conversations": "Cerca conversazioni",
   "Search in Current Conversation": "Cerca nella conversazione corrente",
   "Search models": "Cerca modelli",
   "Search models...": "Cerca modelli...",
