--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -587,6 +587,7 @@
   "Scope": "スコープ",
   "Search": "検索",
   "Search All Conversations": "全ての会話を検索する",
+  "Search conversations": "会話を検索",
   "Search in Current Conversation": "現在の会話を検索する",
   "Search models": "モデルを検索",
   "Search models...": "モデルを検索...",
