--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -587,6 +587,7 @@
   "Scope": "범위",
   "Search": "검색",
   "Search All Conversations": "모든 대화에서 검색",
+  "Search conversations": "대화 검색",
   "Search in Current Conversation": "현재 대화에서 검색",
   "Search models": "모델 검색",
   "Search models...": "모델 검색...",
