--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -586,6 +586,7 @@
   "Scope": "Omfang",
   "Search": "Søk",
   "Search All Conversations": "Søk i alle samtaler",
+  "Search conversations": "Søk samtaler",
   "Search in Current Conversation": "Søk i nåværende samtale",
   "Search models": "Søk modeller",
   "Search models...": "Søk modeller...",
