--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -586,6 +586,7 @@
   "Scope": "Âmbito",
   "Search": "Pesquisar",
   "Search All Conversations": "Pesquisar em Todas as Conversas",
+  "Search conversations": "Procurar conversas",
   "Search in Current Conversation": "Pesquisar na Conversa Atual",
   "Search models": "Pesquisar modelos",
   "Search models...": "Pesquisar modelos...",
