--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -587,6 +587,7 @@
   "Scope": "Область",
   "Search": "Поиск",
   "Search All Conversations": "Поиск во всех разговорах",
+  "Search conversations": "Искать беседы",
   "Search in Current Conversation": "Поиск в текущем разговоре",
   "Search models": "Поиск моделей",
   "Search models...": "Поиск моделей...",
