--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -586,6 +586,7 @@
   "Scope": "Omfattning",
   "Search": "Sök",
   "Search All Conversations": "Sök i alla konversationer",
+  "Search conversations": "Sök konversationer",
   "Search in Current Conversation": "Sök i aktuell konversation",
   "Search models": "Sök modeller",
   "Search models...": "Sök modeller...",
