--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -592,6 +592,7 @@
   "Scope": "范围",
   "Search": "搜索",
   "Search All Conversations": "在所有对话中搜索",
+  "Search conversations": "搜索对话",
   "Search in Current Conversation": "在当前对话中搜索",
   "Search models": "搜索模型",
   "Search models...": "搜索模型...",
