--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -592,6 +592,7 @@
   "Scope": "範圍",
   "Search": "搜尋",
   "Search All Conversations": "搜尋所有對話",
+  "Search conversations": "搜尋對話",
   "Search in Current Conversation": "搜尋當前對話",
   "Search models": "搜尋模型",
   "Search models...": "搜尋模型...",
