feat: add visual indicators for expired license status (#506)
- Show orange warning alert when license is expired but quota pack available
- Display 'Renew License' link in the warning
- Show expired date in red color with '(Expired)' suffix
- Add '(Expired)' indicator next to 'License Activated' text

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -554,6 +554,7 @@
   "Remaining/Total Quota": "الحصة المتبقية / الإجمالية",
   "Remote (http/sse)": "عن بعد (http/sse)",
   "rename": "إعادة تسمية",
+  "Renew License": "تجديد الرخصة",
   "Reply Again": "الرد مرة أخرى",
   "Reply Again Below": "الرد مرة أخرى أدناه",
   "report": "الإبلاغ",
@@ -792,5 +793,6 @@
   "Your HTML content has been published. You can access it via the link below.": "تم نشر محتوى HTML الخاص بك. يمكنك الوصول إليه عبر الرابط أدناه.",
   "Your license has expired.": "لقد انتهت صلاحية ترخيصك.",
   "Your license has expired. Please check your subscription or purchase a new one.": "انتهت صلاحية ترخيصك. يرجى التحقق من اشتراكك أو شراء ترخيص جديد.",
+  "Your license has expired. You can continue using your quota pack.": "انتهت صلاحية ترخيصك. يمكنك متابعة استخدام حزمة حصتك.",
   "Your rating on the App Store would help make Chatbox even better!": "تقييمك في App Store سيساعد على جعل Chatbox أفضل!"
 }
