--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -554,6 +554,7 @@
   "Remaining/Total Quota": "Cuota restante/total",
   "Remote (http/sse)": "Remoto (http/sse)",
   "rename": "Renombrar",
+  "Renew License": "Renovar Licencia",
   "Reply Again": "Responder de nuevo",
   "Reply Again Below": "Responder de nuevo abajo",
   "report": "Reportar",
@@ -792,5 +793,6 @@
   "Your HTML content has been published. You can access it via the link below.": "Su contenido HTML ha sido publicado. Puede acceder a él mediante el siguiente enlace.",
   "Your license has expired.": "Su licencia ha caducado.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Su licencia ha expirado. Por favor, verifique su suscripción o adquiera una nueva.",
+  "Your license has expired. You can continue using your quota pack.": "Su licencia ha caducado. Puede seguir usando su paquete de cuota.",
   "Your rating on the App Store would help make Chatbox even better!": "Tu calificación en la App Store ayudará a hacer que Chatbox sea aún mejor!"
 }
