--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -555,6 +555,7 @@
   "Remaining/Total Quota": "Restant / Quota total",
   "Remote (http/sse)": "À distance (http/sse)",
   "rename": "Renommer",
+  "Renew License": "Renouveler la licence",
   "Reply Again": "Répondre à nouveau",
   "Reply Again Below": "Répondre à nouveau ci-dessous",
   "report": "Signaler",
@@ -793,5 +794,6 @@
   "Your HTML content has been published. You can access it via the link below.": "Votre contenu HTML a été publié. Vous pouvez y accéder via le lien ci-dessous.",
   "Your license has expired.": "Votre licence a expiré.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Votre licence a expiré. Veuillez vérifier votre abonnement ou en acheter un nouveau.",
+  "Your license has expired. You can continue using your quota pack.": "Votre licence a expiré. Vous pouvez continuer à utiliser votre pack de quota.",
   "Your rating on the App Store would help make Chatbox even better!": "Votre note sur l'App Store aidera à rendre Chatbox encore meilleur!"
 }
