--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -553,6 +553,7 @@
   "Remaining/Total Quota": "Quota rimanente/totale",
   "Remote (http/sse)": "Remoto (http/sse)",
   "rename": "Rinomina",
+  "Renew License": "Rinnova licenza",
   "Reply Again": "Rispondi di nuovo",
   "Reply Again Below": "Rispondi di nuovo sotto",
   "report": "Segnala",
@@ -790,5 +791,6 @@
   "Your HTML content has been published. You can access it via the link below.": "I tuoi contenuti HTML sono stati pubblicati. Puoi accedervi tramite il link qui sotto.",
   "Your license has expired.": "La tua licenza è scaduta.",
   "Your license has expired. Please check your subscription or purchase a new one.": "La tua licenza è scaduta. Per favore, controlla il tuo abbonamento o acquistane uno nuovo.",
+  "Your license has expired. You can continue using your quota pack.": "La tua licenza è scaduta. Puoi continuare a utilizzare il tuo pacchetto quota.",
   "Your rating on the App Store would help make Chatbox even better!": "Il tuo voto nell'App Store aiuterà a rendere Chatbox ancora migliore!"
 }
