--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -554,6 +554,7 @@
   "Remaining/Total Quota": "Återstående/Total kvot",
   "Remote (http/sse)": "Fjärr (http/sse)",
   "rename": "Byt namn",
+  "Renew License": "Förnya licens",
   "Reply Again": "Svara igen",
   "Reply Again Below": "Svara igen nedan",
   "report": "Rapportera",
@@ -793,5 +794,6 @@
   "Your HTML content has been published. You can access it via the link below.": "Ditt HTML-innehåll har publicerats. Du kan komma åt det via länken nedan.",
   "Your license has expired.": "Din licens har gått ut.",
   "Your license has expired. Please check your subscription or purchase a new one.": "Din licens har gått ut. Vänligen kontrollera din prenumeration eller köp en ny.",
+  "Your license has expired. You can continue using your quota pack.": "Din licens har gått ut. Du kan fortsätta använda ditt kvotpaket.",
   "Your rating on the App Store would help make Chatbox even better!": "Din betyg på App Store hjälper till att göra Chatbox ännu bättre!"
 }
