--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -560,6 +560,7 @@
   "Remaining/Total Quota": "剩余/总配额",
   "Remote (http/sse)": "远程 (http/sse)",
   "rename": "重命名",
+  "Renew License": "续订许可",
   "Reply Again": "重新回答",
   "Reply Again Below": "在下方重新回答",
   "report": "举报",
@@ -805,5 +806,6 @@
   "Your HTML content has been published. You can access it via the link below.": "您的 HTML 内容已成功发布。您可以通过以下链接访问。",
   "Your license has expired.": "您的许可证已过期。",
   "Your license has expired. Please check your subscription or purchase a new one.": "您的 license 已过期。请检查您的订阅或重新购买。",
+  "Your license has expired. You can continue using your quota pack.": "您的许可证已过期。您可以继续使用您的配额包。",
   "Your rating on the App Store would help make Chatbox even better!": "您的 App Store 评分将帮助 Chatbox 变得更好！"
 }
