--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -554,6 +554,7 @@
   "Remaining/Total Quota": "Quota Restante / Total",
   "Remote (http/sse)": "Remoto (http/sse)",
   "rename": "Renomear",
+  "Renew License": "Renovar Licença",
   "Reply Again": "Responder Novamente",
   "Reply Again Below": "Responder Novamente Abaixo",
   "report": "Reportar",
@@ -791,5 +792,6 @@
   "Your HTML content has been published. You can access it via the link below.": "O seu conteúdo HTML foi publicado. Pode aceder a ele através do link abaixo.",
   "Your license has expired.": "A sua licença expirou.",
   "Your license has expired. Please check your subscription or purchase a new one.": "A sua licença expirou. Por favor, verifique a sua subscrição ou adquira uma nova.",
+  "Your license has expired. You can continue using your quota pack.": "A sua licença expirou. Pode continuar a usar o seu pacote de quotas.",
   "Your rating on the App Store would help make Chatbox even better!": "Seu rating no App Store ajudará a tornar o Chatbox ainda melhor!"
 }
