--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -560,6 +560,7 @@
   "Remaining/Total Quota": "剩餘/總配額",
   "Remote (http/sse)": "遠端 (http/sse)",
   "rename": "改名",
+  "Renew License": "續訂許可證",
   "Reply Again": "重新回覆",
   "Reply Again Below": "在下方重新回覆",
   "report": "舉報",
@@ -798,5 +799,6 @@
   "Your HTML content has been published. You can access it via the link below.": "您的 HTML 內容已成功發佈。您可以透過以下連結訪問。",
   "Your license has expired.": "您的許可證已過期。",
   "Your license has expired. Please check your subscription or purchase a new one.": "您的 License 已過期。請檢查您的訂閱或購買新的 License。",
+  "Your license has expired. You can continue using your quota pack.": "您的許可證已過期。您可以繼續使用您的配額包。",
   "Your rating on the App Store would help make Chatbox even better!": "您的 App Store 評分將幫助 Chatbox 變得更好！"
 }
