feat: add automatic retry mechanism for 5xx errors (#508)
* feat: add automatic retry mechanism for 5xx errors using ai-retry

- Integrate ai-retry@0 library for AI SDK v5 compatibility
- Add retry logic with 5 max attempts and exponential backoff for 5xx errors
- Add onStatusChange callback to propagate retry status to UI
- Add 'retrying' status type to MessageStatus for lightweight UI indication
- Display retry progress via Message status (non-persistent)

* chore: add i18n translations for retry status

* fix: improve type safety and clarify async intent in retry mechanism

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -579,6 +579,7 @@
   "Retry All": "إعادة محاولة الكل",
   "Retry locally": "إعادة المحاولة محليًا",
   "Retry with Server Parsing": "إعادة المحاولة بالتحليل عبر الخادم",
+  "Retrying {{attempt}}/{{maxAttempts}}": "إعادة المحاولة {{attempt}}/{{maxAttempts}}",
   "Return to the top": "العودة إلى الأعلى",
   "Roadmap": "خارطة الطريق",
   "save": "حفظ",
