--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -579,6 +579,7 @@
   "Retry All": "Prøv alle på nytt",
   "Retry locally": "Tenk lokalt på nytt",
   "Retry with Server Parsing": "Prøv igjen med serverparsing",
+  "Retrying {{attempt}}/{{maxAttempts}}": "Prøver på nytt {{attempt}} av {{maxAttempts}}",
   "Return to the top": "Tilbake til toppen",
   "Roadmap": "Veikart",
   "save": "Lagre",
