--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -579,6 +579,7 @@
   "Retry All": "Återförsök alla",
   "Retry locally": "Försök igen lokalt",
   "Retry with Server Parsing": "Försök igen med servertolkning",
+  "Retrying {{attempt}}/{{maxAttempts}}": "Försöker igen {{attempt}}/{{maxAttempts}}",
   "Return to the top": "Återgå till toppen",
   "Roadmap": "Utvecklingsplan",
   "save": "Spara",
